data/derived/comb/progs/unify/prog4008.ml.out
Characters 91-95:
  | head::tail::third -> head::tail;;
                               ^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
